--- a/register.html
+++ b/register.html
@@ -2,8 +2,11 @@
 <html>
     <body>
         <script>
-           const fullName='Abhishek Sunar',
-           const email='abhisheksunar4526@gmail.com';
+           const user={
+             fullname = 'Abhishek Sunar',
+             email ='abhisheksunar4526@gmail.com',
+            address = 'Bardiya,Nepal';
+           }
         </script>
     </body>
 </html>
