--- a/register.html
+++ b/register.html
@@ -5,7 +5,8 @@
            const user={
              fullname = 'Abhishek Sunar',
              email ='abhisheksunar4526@gmail.com',
-            address = 'Bardiya,Nepal';
+             address = 'Bardiya,Nepal',
+             rollNo = 40;
            }
         </script>
     </body>
