--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
              fullname = 'Abhishek Sunar',
              email ='abhisheksunar4526@gmail.com',
             address = 'Bardiya,Nepal';
+            rollNo=30
            }
         </script>
     </body>
